--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@google-cloud/dialogflow": "^7.0.1",
     "@google-cloud/language": "^7.0.1",
     "framer-motion": "^12.9.2",
+    "fs": "^0.0.1-security",
+    "https": "^1.0.0",
     "i18next": "^25.0.1",
     "next": "15.3.1",
     "openai": "^4.96.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-i18next": "^15.5.1"
+    "react-i18next": "^15.5.1",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -26,9 +29,12 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/winston": "^2.4.4",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
+
 }
